--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -23,3 +23,18 @@
     font-family: $font-primary;
     line-height: 1.6;
   }
+
+    /*Loader from react loaders*/
+.ball-clip-rotate > div {
+  width: 150px;
+  height: 150px;
+}
+
+.loaderContainer {
+  height: 160px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
