--- a/src/sass/partials/_buttons.scss
+++ b/src/sass/partials/_buttons.scss
@@ -14,3 +14,33 @@ button {
         cursor: pointer;
     }
 }
+
+.btn-menu {
+    max-width: fit-content;
+    padding: .8em 1.2em;
+    background-color: $color-dark;
+    margin-bottom: 1em;
+}
+
+.btn-back {
+    margin-bottom: .8em;
+    cursor: pointer;
+    font-size: 2.5rem !important;
+
+    &:hover {
+        color: $color-primary;
+    }
+}
+
+.btn-reset {
+    text-align: center;
+    font-size: .8rem;
+    font-style: italic;
+    color: grey;
+    transition: 2s;
+
+    &:hover {
+        cursor: pointer;
+        color: $color-dark;
+    }
+}
