--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -5,3 +5,74 @@ form {
     max-width: 500px;
     margin: 0 auto;
 }
+
+.box {
+    background: $color-primary !important;
+    color: white !important;
+    text-align: center;
+    padding: 1.5em;
+    min-height: 100px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-weight: 700;
+    transition: 2s;
+    border-radius: 12px !important;
+    margin-bottom: 10px;
+
+    &:hover {
+        background-color: $color-hover !important;
+        cursor: pointer;
+    }
+
+    &-inactive {
+        opacity: .4;
+    }
+}
+
+.box-new {
+    background: transparent !important;
+    color: grey !important;
+    padding: 1.5em;
+    min-height: 100px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-weight: 700;
+    transition: 2s;
+    border-radius: 12px !important;
+    border: dashed 2px grey;
+    box-shadow: none !important;
+
+    &:hover {
+        border-color: $color-primary !important;
+        color: $color-primary !important;
+        cursor: pointer;
+    }
+}
+
+.answers-form {
+    max-width: 100%;
+    flex: 3;
+}
+
+.copy-alert {
+   height: 42px;
+}
+
+.last-received {
+    font-style: italic;
+}
+
+.form-complete {
+    border: 2px solid $color-primary;
+    border-radius: 50%;
+    padding: 1em;
+    font-size: 2rem;
+    font-weight: bold;
+    height: 400px;
+    width: 500px;
+    margin: auto;
+    text-align: center;
+    transition: 2s;
+}
