--- a/src/sass/partials/_variables.scss
+++ b/src/sass/partials/_variables.scss
@@ -3,3 +3,4 @@ $color-hover: #FF721E;
 $color-dark: #191919;
 $font-primary: "Roboto Condensed", sans-serif;
 $font-body: "Work Sans", sans-serif;
+$primary-color: $color-primary;
