--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "./partials/variables";
+@import 'loaders.css/src/animations/ball-clip-rotate.scss';
 
 @import "./partials/base";
 @import "./partials/forms";
