--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -76,3 +76,14 @@ form {
     text-align: center;
     transition: 2s;
 }
+
+.no-answers {
+    height: 300px;
+    width: 100%;
+    border: 2px solid $color-primary;
+    padding: 2em;
+    text-align: center;
+    font-size: 2rem;
+    border-radius: 12px;
+    margin-bottom: 1em;
+}
