--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -86,6 +86,10 @@ form {
     font-size: 2rem;
     border-radius: 12px;
     margin-bottom: 1em;
+
+    @media only screen and (max-width: 840px) {
+        font-size: 1.5rem;
+      }
 }
 
 .react-confirm-alert-body {
