--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -3,12 +3,24 @@
     margin: auto;
     padding: 1em;
     width: 100%;
+
+    @media only screen and (max-width: 500px) {
+        padding: 1em 1.5em;
+      }
 }
 
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media only screen and (max-width: 840px) {
+        text-align: center;
+        flex-direction: column;
+        h1 {
+            font-size: 2rem;
+        }
+      }
 }
 
 .logo {
