--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -51,4 +51,8 @@ header {
         display: flex;
         flex-direction: column;
     }
+
+    @media only screen and (max-width: 500px) {
+        flex-direction: column;
+      }
 }
