--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -75,6 +75,12 @@ form {
     margin: auto;
     text-align: center;
     transition: 2s;
+
+    @media only screen and (max-width: 500px) {
+        font-size: 1.5rem;
+        height: 250px;
+        width: 250px;
+      }
 }
 
 .no-answers {
