--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -19,6 +19,10 @@ header {
     text-transform: capitalize;
   }
 
+  span {
+    font-style: italic;
+  }
+
   @media only screen and (max-width: 840px) {
     text-align: center;
     flex-direction: column;
