hover how it work

--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -67,6 +67,12 @@ header {
     color: $color-primary;
     font-weight: bold;
     margin-bottom: 1em;
+    transition: 0.2s;
+
+    &:hover {
+      color: $color-hover;
+      text-decoration: underline;
+    }
   }
 
   @media only screen and (max-width: 500px) {
