--- a/src/sass/partials/_forms.scss
+++ b/src/sass/partials/_forms.scss
@@ -126,7 +126,7 @@ form {
 .box-how {
   text-align: center;
   padding: 1em;
-  border-radius: 12px;
+  border-radius: 12px !important;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px !important;
 
   svg {
