--- a/src/sass/partials/_buttons.scss
+++ b/src/sass/partials/_buttons.scss
@@ -22,6 +22,10 @@ button {
   padding: 0.8em 1.2em;
   background-color: $color-dark;
   margin-bottom: 1em;
+
+  &__mobile {
+    background-color: $color-primary;
+  }
 }
 
 .btn-back {
