--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -48,11 +48,23 @@ header {
   display: flex;
   gap: 2em;
 
-  & > div:first-of-type {
+  .desktop-nav {
     flex: 1;
+    display: none;
+
+    @media only screen and (min-width: 500px) {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
-  & > div:not(:first-of-type) {
+  & > div:first-of-type {
+    @media only screen and (min-width: 500px) {
+      display: none;
+    }
+  }
+
+  & > div {
     flex: 3;
   }
 
